--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Terraform Init/Validate/Plan
         run: |
           terraform init -upgrade
-          terraform fmt -check
+          terraform fmt -check -diff -list=true
           terraform validate
           terraform plan -out=tfplan
 
